# obsplugin

./: CMakeLists.txt  CMakePresets.json  README.md  cmakeagain.sh
.github/: copilot-instructions.md
src/: config-dialog.cpp  config-dialog.h  obs-config-helper.cpp  obs-config-helper.h  output-config.cpp  output-config.h  plugin-dock.cpp  plugin-dock.h  plugin-main.cpp  plugin-main.h  plugin-support.h  rtmp-output-config.cpp  rtmp-output-config.h  rtmp-output.cpp  rtmp-output.h  stream-output.cpp  stream-output.h  toast-helper.h  whip-output-config.cpp  whip-output-config.h
